--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -4,9 +4,6 @@ date: 2024-08-24
 layout: post
 ---
 
-**Outline: Tax Withholding & Estimated Tax**
-
-
 ## 1. Introduction
 
 w/h = with holding
@@ -51,13 +48,13 @@ on:
      - Certain Federal Payments
    - **Backup w/h - subject to 24% rate, IFF no TIN, TIN is not correct, IRS tells payer to w/h int & dividends
       - https://www.irs.gov/businesses/small-businesses-self-employed/backup-w/h
-      - Penalties for false information to avoid backup w/h. The civil penalty is $500, criminal is fine up to $1,000 or 1 year, or both.
+      - Penalties for false information to avoid backup w/h. The civil penalty is \$500, criminal is fine up to \$1,000 or 1 year, or both.
 
 
 ## 5. Determining Amount of Tax Withheld Using Form W-4
 
    - **FOLLOW: Form W-4 & Worksheets**
-   - [w4](https://www.irs.gov/pub/irs-pdf/fw4.pdf?OWASP_CSRFTOKEN=5DVY-N1SM-ILPA-FK96-XIIS-IJRA-FFMU-ICIR)
+   - <button onclick="buttonFunc()">See W4</button> <script> function buttonFunc() { window.open("https://www.irs.gov/pub/irs-pdf/fw4.pdf?OWASP_CSRFTOKEN=5DVY-N1SM-ILPA-FK96-XIIS-IJRA-FFMU-ICIR"); } </script>
    - New Jobs, Pension Income, Checking & Changing Your w/h - NEEDS W4
    - **OK** for multiple worksheets for couples
    - **OK** for deductions worksheet
@@ -78,13 +75,13 @@ gle.
 
 ## 8. Penalties for False Information on Form W-4
 
-## 9. Tips & Tax w/h
+## 9. Tips & Pub. 531, Reporting Tip Income
 
    - **Reporting Tips to Employers**
    - **w/h Rules**
    - **Reference:** Pub. 531, Reporting Tip Income
 
-## 10. Taxable Fringe Benefits
+## 10. Fringe Benefits
 
    - **Examples & w/h Rules**
    - **Reference:** Pub. 505, Tax w/h & Estimated Tax
@@ -150,11 +147,10 @@ gle.
    - **IRS Penalty Calculation**
    - **Reference:** Instructions for Form 2210
 
-## 21. Additional Information & Forms
+## 21. Publications & Forms Mentioned
 
-**Publications & Forms Mentioned**
    - **Pub. 505** - Tax w/h & Estimated Tax
-   - **Pub. 501** - Dependents, St&ard Deduction, & Filing Information
+   - **Pub. 501** - Dependents, Standard Deduction, & Filing Information
    - **Pub. 531** - Reporting Tip Income
    - **Pub. 225** - Farmer’s Tax Guide
    - **Pub. 519** - U.S. Tax Guide for Aliens
