--- a/_posts/2024-08-22-minor-p4693a.md
+++ b/_posts/2024-08-22-minor-p4693a.md
@@ -7,10 +7,12 @@ Main points: General info for becoming an EA
 
 - An EA must pass a three-part Special Enrollment Examination (SEE) administered by the IRS showing
   - Proficiency in federal tax planning, individual and business tax return, preparation, representation, and ethics.
-  - The exam is administered for the IRS by Prometric, www.prometric.com/see
-  - EAs generally have unlimited practice rights, meaning they can represent any taxpayer regarding any tax matter before any IRS office.
 
-- Enrolled agents are required to renew their licenses to practice every three years.
+- The exam is administered for the IRS by Prometric, www.prometric.com/see
+
+- EAs generally have unlimited practice rights, meaning they can represent any taxpayer regarding any tax matter before any IRS office.
+
+- Enrolled agents are required to renew their licenses every three years.
   - Renewal is done online at www.pay.gov.
   - Enrolled agents must have a valid **PTIN**, renewed annually, even if they do not prepare tax returns.
   - EAs must take 16 hours annually, two of which must be in ethics.
