--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -6,39 +6,39 @@ layout: post
 
 ## 1. Introduction
 
-w/h = with holding
+> w/h = with holding
+{: .block-tip }
 
-This section discusses income tax w/h
-on:
+This section discusses income tax w/h on:
 
-1.  Salaries & wages,
-1.  Tips,
-1.  Taxable fringe benefits,
-1.  Sick pay,
-1.  Pensions & annuities,
-1.  Gambling winnings,
-1.  Unemployment compensation, &
-1.  Certain federal payments.
+1. Salaries & wages,
+1. Tips,
+1. Taxable fringe benefits,
+1. Sick pay,
+1. Pensions & annuities,
+1. Gambling winnings,
+1. Unemployment compensation, &
+1. Certain federal payments.
 
 - Methods to Pay Tax as You Earn Income
-   - w/h
-   - Estimated Tax
+    - w/h
+    - Estimated Tax
 
 ## 2. What's New for 2024
 
-   - Tax Law Changes for 2024 - See **Pub. 505**, Tax w/h & Estimated Tax
+- Tax Law Changes for 2024 - See **Pub. 505**, Tax w/h & Estimated Tax
 
 ## 3. Reminders
 
-   - **Estimated Tax Safe Harbor for Higher-Income Taxpayers** pay the smaller of:
+- **Estimated Tax Safe Harbor for Higher-Income Taxpayers** pay the smaller of:
      - PAY 90% of AGI
      - OR
      - 110% of est. tax
 
 ## 4. Tax w/h
 
-   - **Income Tax w/h on Various Types of Income** - See **Pub. 505**, Tax w/h & Estimated Tax
-     - Salaries & Wages
+- **Income Tax w/h on Various Types of Income** - See **Pub. 505**, Tax w/h & Estimated Tax
+   - Salaries & Wages
      - Tips
      - Taxable Fringe Benefits
      - Sick Pay
@@ -53,83 +53,82 @@ on:
 
 ## 5. Determining Amount of Tax Withheld Using Form W-4
 
-   - **FOLLOW: Form W-4 & Worksheets**
-   - <button onclick="buttonFunc()">See W4</button> <script> function buttonFunc() { window.open("https://www.irs.gov/pub/irs-pdf/fw4.pdf?OWASP_CSRFTOKEN=5DVY-N1SM-ILPA-FK96-XIIS-IJRA-FFMU-ICIR"); } </script>
-   - New Jobs, Pension Income, Checking & Changing Your w/h - NEEDS W4
-   - **OK** for multiple worksheets for couples
-   - **OK** for deductions worksheet
-   - **No Form W-4** If you don't give your employer a completed W-4, your employer must withhold at the highest rate, as if you were sin-
-gle.
-  
+- <button onclick="buttonFunc()">Open W4</button> <script> function buttonFunc() { window.open("https://www.irs.gov/pub/irs-pdf/fw4.pdf?OWASP_CSRFTOKEN=5DVY-N1SM-ILPA-FK96-XIIS-IJRA-FFMU-ICIR"); } </script>
+- New Jobs, Pension Income, Checking & Changing Your w/h - NEEDS W4
+- **OK** for multiple worksheets for couples
+- **OK** for deductions worksheet
 
+> **No Form W-4** If you don't give your employer a completed W-4, your employer must withhold at the highest rate, as if you were single.
+{: .block-danger }
+  
 ## 6. Exemption From w/h
 
-   - **Eligibility Criteria**
-   - **Special Rules for Students, Elderly, & Blind**
-   - **Claiming Exemption with Form W-4**
+- **Eligibility Criteria**
+- **Special Rules for Students, Elderly, & Blind**
+- **Claiming Exemption with Form W-4**
 
 ## 7. Supplemental Wages
 
-   - **Definition & w/h Rules**
-   - **Expense Allowances**
+- **Definition & w/h Rules**
+- **Expense Allowances**
 
 ## 8. Penalties for False Information on Form W-4
 
 ## 9. Tips & Pub. 531, Reporting Tip Income
 
-   - **Reporting Tips to Employers**
-   - **w/h Rules**
-   - **Reference:** Pub. 531, Reporting Tip Income
+- **Reporting Tips to Employers**
+- **w/h Rules**
+- **Reference:** Pub. 531, Reporting Tip Income
 
 ## 10. Fringe Benefits
 
-   - **Examples & w/h Rules**
-   - **Reference:** Pub. 505, Tax w/h & Estimated Tax
+- **Examples & w/h Rules**
+- **Reference:** Pub. 505, Tax w/h & Estimated Tax
 
 ## 11. Sick Pay
 
-   - **w/h Rules for Sick Pay**
-   - **Special Cases Involving Third-Party Payers**
-   - **Union Agreements & Sick Pay**
+- **w/h Rules for Sick Pay**
+- **Special Cases Involving Third-Party Payers**
+- **Union Agreements & Sick Pay**
 
 ## 12. Pensions & Annuities
 
-   - **w/h Rules**
-   - **Reference:** Pub. 505, Tax w/h & Estimated Tax
+- **w/h Rules**
+- **Reference:** Pub. 505, Tax w/h & Estimated Tax
 
 ## 13. Gambling Winnings
 
-   - **w/h Rules & Exceptions**
-   - **Form W-2G**
+- **w/h Rules & Exceptions**
+- **Form W-2G**
 
 ## 14. Unemployment Compensation
 
-   - **w/h Options & Requirements**
-   - **Reference:** Form W-4V
+- **w/h Options & Requirements**
+- **Reference:** Form W-4V
 
 ## 15. Federal Payments
 
-   - **Optional w/h on Federal Payments**
-   - **Reference:** Pub. 225, Farmer’s Tax Guide
+- **Optional w/h on Federal Payments**
+- **Reference:** Pub. 225, Farmer’s Tax Guide
 
 ## 16. Backup w/h
 
-   - **Situations Where Backup w/h Applies**
-   - **Reference:** IRS Backup w/h Information
+- **Situations Where Backup w/h Applies**
+- **Reference:** IRS Backup w/h Information
 
 ## 17. Estimated Tax for 2024
 
-   - **Who Must Pay Estimated Tax**
-   - **Special Rules for Farmers, Fishermen, & Aliens**
-   - **General Rule for Making Payments**
-   - **How to Figure Estimated Tax**
-   - **When to Pay Estimated Tax**
+- **Who Must Pay Estimated Tax**
+- **Special Rules for Farmers, Fishermen, & Aliens**
+- **General Rule for Making Payments**
+- **How to Figure Estimated Tax**
+- **When to Pay Estimated Tax**
 
 ## 18. How To Pay Estimated Tax
 
-   - **Methods of Payment**
-     - Online Payment Options
-     - EFTPS
+- **Methods of Payment**
+    - Online Payment Options
+   - Electronic Federal Tax Payment System (EFTPS)
      - Pay by Phone
      - Pay by Mobile Device
      - Pay by Check or Money Order
@@ -137,28 +136,33 @@ gle.
 
 ## 19. Credit for w/h & Estimated Tax for 2023
 
-   - **Claiming Credit on Tax Return**
-   - **Special Rules for Multiple Employers, Corrected Forms, & Separate Returns**
+- **Claiming Credit on Tax Return**
+- **Special Rules for Multiple Employers, Corrected Forms, & Separate Returns**
 
 ## 20. Underpayment Penalty for 2023
 
-   - **Conditions for Penalty**
-   - **Special Rules for Farmers & Fishermen**
-   - **IRS Penalty Calculation**
-   - **Reference:** Instructions for Form 2210
+- **Conditions for Penalty**
+- **Special Rules for Farmers & Fishermen**
+- **IRS Penalty Calculation**
+- **Reference:** Instructions for Form 2210
 
 ## 21. Publications & Forms Mentioned
 
-   - **Pub. 505** - Tax w/h & Estimated Tax
-   - **Pub. 501** - Dependents, Standard Deduction, & Filing Information
-   - **Pub. 531** - Reporting Tip Income
-   - **Pub. 225** - Farmer’s Tax Guide
-   - **Pub. 519** - U.S. Tax Guide for Aliens
-   - **Pub. 555** - Community Property
-   - **Pub. 966** - EFTPS (Electronic Federal Tax Payment System)
-   - **Pub. 5250** - Pay by Cash
-   - **Form W-4** - Employee’s w/h Certificate
-   - **Form W-4V** - Voluntary w/h Request
-   - **Form 1040-ES** - Estimated Tax for Individuals
-   - **Form 8822** - Change of Address
-   - **Form 2210** - Underpayment of Estimated Tax by Individuals, Estates, & Trusts
+ <script>
+function buttonFunc() { window.open("https://www.irs.gov/tax-professionals/enrolled-agents"); }
+</script>
+<button onclick="buttonFunc()">Link to Forms</button>
+
+- **Pub. 505** - Tax w/h & Estimated Tax
+- **Pub. 501** - Dependents, Standard Deduction, & Filing Information
+- **Pub. 531** - Reporting Tip Income
+- **Pub. 225** - Farmer’s Tax Guide
+- **Pub. 519** - U.S. Tax Guide for Aliens
+- **Pub. 555** - Community Property
+- **Pub. 966** - EFTPS (Electronic Federal Tax Payment System)
+- **Pub. 5250** - Pay by Cash
+- **Form W-4** - Employee’s w/h Certificate
+- **Form W-4V** - Voluntary w/h Request
+- **Form 1040-ES** - Estimated Tax for Individuals
+- **Form 8822** - Change of Address
+- **Form 2210** - Underpayment of Estimated Tax by Individuals, Estates, & Trusts
