--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -37,19 +37,19 @@ This section discusses income tax w/h on:
 
 ## 4. Tax w/h
 
-- **Income Tax w/h on Various Types of Income** - See **Pub. 505**, Tax w/h & Estimated Tax
-   - Salaries & Wages
-     - Tips
-     - Taxable Fringe Benefits
-     - Sick Pay
-     - Pensions & Annuities
-     - Gambling Winnings
-     - Unemployment Compensation
-     - Certain Federal Payments
-   - **Backup w/h - subject to 24% rate, IFF no TIN, TIN is not correct, IRS tells payer to w/h int & dividends
-      - https://www.irs.gov/businesses/small-businesses-self-employed/backup-w/h
-      - Penalties for false information to avoid backup w/h. The civil penalty is \$500, criminal is fine up to \$1,000 or 1 year, or both.
-
+- **Income Tax w/h on Types of Income** - See **Pub. 505**, Tax w/h & Estimated Tax
+  - Salaries & Wages
+  - Tips
+  - Taxable Fringe Benefits
+  - Sick Pay
+  - Pensions & Annuities
+  - Gambling Winnings
+  - Unemployment Compensation
+  - Certain Federal Payments
+ 
+- **Backup w/h - subject to 24% rate, IFF no TIN, TIN is not correct, IRS tells payer to w/h int & dividends
+  - https://www.irs.gov/businesses/small-businesses-self-employed/backup-w/h
+  - Penalties for false information to avoid backup w/h. The civil penalty is \$500, criminal is fine up to \$1,000 or 1 year, or both.
 
 ## 5. Determining Amount of Tax Withheld Using Form W-4
 
