--- a/_pages/3-pub17.1-1.md
+++ b/_pages/3-pub17.1-1.md
@@ -29,7 +29,7 @@ layout: post
 
 - Factors determining whether you must file: **gross income, filing status, and age**
 - See Table 1-1, Table 1-2, Table 1-3
-- Generally, > $25k file separately, > $32K filing jointly
+- Generally, > \$25k file separately, > $32K filing jointly
 
 - Special rules: **dependents, self-employed persons, and aliens**
 - Income thresholds are provided in tables (Table 1-1, Table 1-2, Table 1-3) for different filing statuses.
@@ -46,7 +46,6 @@ layout: post
    - Yes, if their gross income exceeds the filing thresholds.
 3. What should residents of Puerto Rico consider when determining if they need to file a U.S. tax return?
    - Whether they have income from U.S. sources and how it affects their gross income.
-
 
 
 - Community property / domestic partners states - see Form 8958 and Pub. 555
@@ -79,8 +78,8 @@ You are self-employed if you:
 - Are an independent contractor,
 - Are a member of a partnership, or
 - Are in business for yourself in any other way.
-- >$400 income
-- >$108 church income
+- > \$400 income
+- > \$108 church income
 
 - see table 1-1
 - see Schedule SE (Form 1040)
@@ -176,10 +175,6 @@ be filed, Attach the POA to Form 8453.
 - Form 8879, IRS e-file Signature Authorization, to authorize the tax professional to enter your PIN on a return
 
 
-
-
-
-**3 Questions**
 
 ## 3: How to File for Free
 
