--- a/_posts/2024-08-25-free.ea.resources.md
+++ b/_posts/2024-08-25-free.ea.resources.md
@@ -10,15 +10,14 @@ Finding a comprehensive, free guide specifically for the Enrolled Agent (EA) exa
 However, some resources can help you prepare for the EA exam at no cost. Here’s how you can create a free study plan:
 
 
-1. IRS Learning Modules
+A. IRS Learning Modules
 
 The IRS provides free training modules and small business workshops to help you understand various tax topics. These are particularly useful for Part 1 and Part 2 of the exam.
 
 Access them on: 
 [IRS's Online Learning Portal](https://www.irsvideos.gov/)
 
-
-2. IRS Tax Tips and Webinars
+B. IRS Tax Tips and Webinars
 
 Subscribe to the IRS Tax Tips or explore archived IRS webinars to stay updated on tax law changes and key topics.
 
@@ -26,20 +25,20 @@ Visit:
 
 [IRS Tax Tips](https://www.irs.gov/newsroom/irs-tax-tips) 
 
-and 
+and
 
 [IRS Webinars](https://www.irsvideos.gov/) pages for more information.
 
-3. YouTube Channels and Free Online Courses
+C. YouTube Channels and Free Online Courses
 
 Some educators and tax professionals offer free video courses and YouTube tutorials covering EA exam topics. While not as structured as paid courses, these can be very helpful.
 
 Search for channels like “Tax School,” “EA Exam Review,” or specific topics related to the EA exam.
 
-4. Free Practice Questions
+D. Free Practice Questions
 
 Some websites offer free sample questions and practice exams. For example, [Fast Forward Academy](https://fastforwardacademy.com) offers limited free practice questions.
 
-5. Online Forums and Study Groups
+E. Online Forums and Study Groups
 
 Join forums like Reddit’s [r/taxpros](https://www.reddit.com/r/taxpros/) or LinkedIn groups focused on EA exam preparation. Members often share free resources, study tips, and insights.
