Major PDF Re-org

--- a/_pages/01-minor-p5279.md
+++ b/_pages/01-minor-p5279.md
@@ -9,7 +9,10 @@ title: Becoming as EA.pdf
 **A Pathway to Becoming an Enrolled Agent**
 
 - Obtain a Preparer Tax Identification Number (PTIN)
-- Pass the Special Enrollment Examination (SEE)
+  - https://www.irs.gov/tax-professionals/enrolled-agents/become-an-enrolled-agent
+- Study for Special Enrollment Examination (SEE)
+- Pass 3 SEE tests
+  - Sign up: https://www.prometric.com/test-takers/search/irs
 - Pay $140 fee online at www.pay.gov
 - Pass a background check
 
@@ -19,33 +22,19 @@ title: Becoming as EA.pdf
 - Part 2 Businesses
 - Part 3 Representation, Practices & Procedures
 - Each exam contains 100 multiple-choice questions & is 3.5 hours
-- Exam is offered May - February
+- Exam is offered `May - February`
 
 **www.prometric.com/see**
 
-- Prometric’s is a company that proctors the EA exam(~$250). Their website includes an overview of examination topics, sample test questions, FAQs, & "What to Expect on Test Day" video, & "Take a Test Drive"
+- Prometric’s is a company that proctors the EA exam(~$250). 
+- Their website includes info on: *sample test questions, FAQs, & "What to Expect on Test Day" video, & "Take a Test Drive"*
 
----
+**Add'n information**
 
-### These steps will help you
-
-1. Get your PTIN
-
-   - Step 1. https://www.irs.gov/tax-professionals/enrolled-agents/become-an-enrolled-agent
-
-2. Study for test
-3. Sign up for the SEE test  
-
-   - Step 2. https://www.prometric.com/test-takers/search/irs
-  
-4. Continue to next parts
-
-    - Step 3. https://www.irs.gov/tax-professionals/enrolled-agents/enrolled-agents-frequently-asked-questions
-
-
-Additional Info: https://www.irs.gov/tax-professionals/enrolled-agents
+  - https://www.irs.gov/tax-professionals/enrolled-agents/enrolled-agents-frequently-asked-questions
+  - https://www.irs.gov/tax-professionals/enrolled-agents
 
 <div class="pdf-container">
-    <iframe src="/irs.ea/assets/general/minor-p5279.pdf#zoom=FitH" height="600" width="90%" allowFullScreen="true">
+    <iframe src="/irs.ea/assets/pdfs/minor-p5279.pdf#zoom=FitH" height="600" width="90%" allowFullScreen="true">
     </iframe>
 </div>
