--- a/_posts/p334.chapter.09.md
+++ b/_posts/p334.chapter.09.md
@@ -5,78 +5,84 @@ title: p334.chapter.9.pdf
 
 # Chapter 9: Basis of Assets
 
-## Introduction
 - Explains how to determine the basis of various types of assets, which is essential for calculating gain or loss on the sale, exchange, or other disposition of property.
 
 ## Basis of Property
-1. **Definition:** The amount of your investment in property for tax purposes, which is used to calculate depreciation, amortization, and gain or loss on disposition.
-2. **Original Basis:**
-   - **Purchased Property:** Generally, the cost of the property plus any amounts paid for improvements and expenses related to the purchase.
-   - **Inherited Property:** Generally, the fair market value (FMV) of the property on the date of the decedent's death.
-   - **Gifted Property:** Generally, the donor's adjusted basis at the time of the gift, with some adjustments.
-3. **Adjusted Basis:**
-   - **Increases to Basis:** Include the cost of improvements, legal fees, and certain assessments.
-   - **Decreases to Basis:** Include depreciation, casualty and theft losses, and certain credits and deductions.
+
+1. Definition: The amount of your investment in property for tax purposes, which is used to calculate depreciation, amortization, and gain or loss on disposition.
+2. Original Basis:
+   - Purchased Property: Generally, the cost of the property plus any amounts paid for improvements and expenses related to the purchase.
+   - Inherited Property: Generally, the fair market value (FMV) of the property on the date of the decedent's death.
+   - Gifted Property: Generally, the donor's adjusted basis at the time of the gift, with some adjustments.
+3. Adjusted Basis:
+   - Increases to Basis: Include the cost of improvements, legal fees, and certain assessments.
+   - Decreases to Basis: Include depreciation, casualty and theft losses, and certain credits and deductions.
 
 ## Cost Basis
-1. **Cost Basis of Purchased Property:**
-   - **Includes:** Purchase price, sales tax, freight, installation, and other costs associated with acquiring the property.
-   - **Excludes:** Financing costs such as interest on loans.
-2. **Special Rules:**
-   - **Real Property:** Costs of buildings and land should be allocated separately.
-   - **Business Start-Up Costs:** Certain start-up costs can be added to the basis of the property.
+
+1. Cost Basis of Purchased Property:
+   - Includes: Purchase price, sales tax, freight, installation, and other costs associated with acquiring the property.
+   - Excludes: Financing costs such as interest on loans.
+2. Special Rules:
+   - Real Property: Costs of buildings and land should be allocated separately.
+   - Business Start-Up Costs: Certain start-up costs can be added to the basis of the property.
 
 ## Basis Other than Cost
-1. **Inherited Property:**
-   - **General Rule:** The basis is the fair market value (FMV) on the date of the decedent's death.
-   - **Alternative Valuation Date:** If elected, the FMV on the alternate valuation date can be used.
-2. **Gifted Property:**
-   - **General Rule:** The basis is the donor's adjusted basis at the time of the gift, unless the FMV is less than the donor's adjusted basis.
-   - **Special Rule for Losses:** If the FMV is less than the donor's adjusted basis, the basis for determining loss is the FMV.
-3. **Property Received in Exchange:**
-   - **Like-Kind Exchanges:** The basis of the new property is generally the same as the basis of the property exchanged, with adjustments for any additional money paid or received.
+
+1. Inherited Property:
+   - General Rule: The basis is the fair market value (FMV) on the date of the decedent's death.
+   - Alternative Valuation Date: If elected, the FMV on the alternate valuation date can be used.
+2. Gifted Property:
+   - General Rule: The basis is the donor's adjusted basis at the time of the gift, unless the FMV is less than the donor's adjusted basis.
+   - Special Rule for Losses: If the FMV is less than the donor's adjusted basis, the basis for determining loss is the FMV.
+3. Property Received in Exchange:
+   - Like-Kind Exchanges: The basis of the new property is generally the same as the basis of the property exchanged, with adjustments for any additional money paid or received.
 
 ## Adjusted Basis
-1. **Increases to Basis:**
-   - **Improvements:** Costs of improvements that add to the value of the property or extend its life.
-   - **Assessments:** Government assessments for local improvements.
-   - **Restoration Costs:** Costs to restore property after a casualty loss.
-2. **Decreases to Basis:**
-   - **Depreciation:** Deduction for wear and tear, deterioration, or obsolescence.
-   - **Casualty and Theft Losses:** Losses deducted from the basis after an event that damages or destroys the property.
-   - **Exclusions, Credits, and Rebates:** Various tax benefits that reduce the basis.
+
+1. Increases to Basis:
+   - Improvements: Costs of improvements that add to the value of the property or extend its life.
+   - Assessments: Government assessments for local improvements.
+   - Restoration Costs: Costs to restore property after a casualty loss.
+2. Decreases to Basis:
+   - Depreciation: Deduction for wear and tear, deterioration, or obsolescence.
+   - Casualty and Theft Losses: Losses deducted from the basis after an event that damages or destroys the property.
+   - Exclusions, Credits, and Rebates: Various tax benefits that reduce the basis.
 
 ## Basis of Certain Assets
-1. **Real Property:**
-   - **Land and Buildings:** Basis must be allocated between the land and the buildings; land cannot be depreciated.
-   - **Easements:** The sale of an easement reduces the basis of the affected property.
-2. **Business Assets:**
-   - **Inventory:** The basis is generally the cost of the inventory items.
-   - **Depreciable Property:** The basis is the cost minus any depreciation claimed.
-3. **Intangible Assets:**
-   - **Goodwill:** If acquired as part of a business purchase, the basis is the purchase price allocated to goodwill.
-   - **Patents and Copyrights:** The basis is generally the cost to create or purchase the patent or copyright.
+
+1. Real Property:
+   - Land and Buildings: Basis must be allocated between the land and the buildings; land cannot be depreciated.
+   - Easements: The sale of an easement reduces the basis of the affected property.
+2. Business Assets:
+   - Inventory: The basis is generally the cost of the inventory items.
+   - Depreciable Property: The basis is the cost minus any depreciation claimed.
+3. Intangible Assets:
+   - Goodwill: If acquired as part of a business purchase, the basis is the purchase price allocated to goodwill.
+   - Patents and Copyrights: The basis is generally the cost to create or purchase the patent or copyright.
 
 ## Basis in Special Situations
-1. **Property Changed from Personal to Business Use:**
+
+1. Property Changed from Personal to Business Use:
    - The basis is the lesser of the FMV at the time of conversion or the adjusted basis of the property.
-2. **Partnership Interests:**
+2. Partnership Interests:
    - The basis is the amount of money contributed to the partnership, plus the partner's share of partnership liabilities.
-3. **S Corporation Stock:**
+3. S Corporation Stock:
    - The basis is the original cost of the stock, adjusted for items such as income, losses, and distributions.
 
 ## Example of Basis Calculation
-1. **Illustrative Example:** Provides a detailed example showing how to calculate the basis of property, including adjustments for improvements, depreciation, and casualty losses.
+
+1. Illustrative Example: Provides a detailed example showing how to calculate the basis of property, including adjustments for improvements, depreciation, and casualty losses.
 
 ---
 
 # Chapter 9 Quiz Questions
 
-1. **How is the basis of inherited property generally determined?**
-   - **Answer:** The basis of inherited property is generally the fair market value (FMV) on the date of the decedent's death.
+1. How is the basis of inherited property generally determined?
+   - Answer: The basis of inherited property is generally the fair market value (FMV) on the date of the decedent's death.
 
-2. **What adjustments can increase the basis of property?**
-   - **Answer:** The basis of property can be increased by improvements, government assessments, and restoration costs.
+2. What adjustments can increase the basis of property?
+   - Answer: The basis of property can be increased by improvements, government assessments, and restoration costs.
 
-3. **What is the basis of property converted from personal to business use?**
-   - **Answer:** The basis of property converted from personal to business use is the lesser of the FMV at the time of conversion or the adjusted basis of the property.
+3. What is the basis of property converted from personal to business use?
+   - Answer: The basis of property converted from personal to business use is the lesser of the FMV at the time of conversion or the adjusted basis of the property.
