--- a/_posts/2024-08-25-PTIN.app.checklist.md
+++ b/_posts/2024-08-25-PTIN.app.checklist.md
@@ -4,6 +4,6 @@ layout: post
 ---
 
 <div class="pdf-container">
-    <iframe src="/irs.ea/assets/general/PTIN.Application.Checklist_Internal.Revenue.Service.pdf#zoom=FitH" height="600" width="100%" allowFullScreen="true">
+    <iframe src="/irs.ea/assets/pdfs/PTIN.Application.Checklist_Internal.Revenue.Service.pdf#zoom=FitH" height="600" width="100%" allowFullScreen="true">
     </iframe>
 </div>
