--- a/_posts/p334.chapter.01.md
+++ b/_posts/p334.chapter.01.md
@@ -12,45 +12,45 @@ title: p334.chapter.1.pdf
 
 ## Identification Numbers
 
-1. **Social Security Number (SSN):** is generally used as the taxpayer identification number (TIN) for individuals.
-2. **Individual Taxpayer Identification Number (ITIN):** Issued to nonresident and resident aliens who are not eligible to obtain an SSN.
-3. **Employer Identification Number (EIN):** Required if you have employees or file pension or excise tax returns.
+1. Social Security Number (SSN):
+2. Individual Taxpayer Identification Number (ITIN): Issued to nonresident and resident aliens who are not eligible to obtain an SSN.
+3. Employer Identification Number (EIN): Required if you have employees or file pension or excise tax returns.
 
 ## Income Tax
 
-1. **Requirement to File:** If net earnings from self-employment were $400 or more, or if other filing requirements are met.
-2. **Filing Forms:** 1040 or 1040-SR with Schedule C attached.
-3. **Electronic Filing (IRS e-file):** Benefits include accuracy, security, and faster refunds.
+1. Requirement to File: If net earnings from self-employment were $400 or more, or if other filing requirements are met.
+2. Filing Forms: 1040 or 1040-SR with Schedule C attached.
+3. Electronic Filing (IRS e-file): Benefits include accuracy, security, and faster refunds.
 
 ## Self-Employment Tax
 
-1. **Purpose:** Social security and Medicare tax for individuals who work for themselves.
-2. **Requirement to Pay:** Required if net earnings from self-employment are $400 or more.
-3. **Rate:** SE tax rate is 15.3%, with a portion deductible on Schedule 1 (Form 1040).
+1. Purpose: Social security and Medicare tax for individuals who work for themselves.
+2. Requirement to Pay: Required if net earnings from self-employment are $400 or more.
+3. Rate: SE tax rate is 15.3%, with a portion deductible on Schedule 1 (Form 1040).
 
 ## Employment Taxes
 
-1. **Types:** Include social security, Medicare, federal income tax withholding, and federal unemployment tax (FUTA).
-2. **Filing Forms:** 941 or 944 for reporting.
+1. Types: Include social security, Medicare, federal income tax withholding, and federal unemployment tax (FUTA).
+2. Filing Forms: 941 or 944 for reporting.
 
 ## Excise Taxes
 
-1. **Applicable Situations:** If you manufacture, sell certain products, operate certain businesses, or receive payment for specific services.
-2. **Filing Forms:** 
+1. Applicable Situations: If you manufacture, sell certain products, operate certain businesses, or receive payment for specific services.
+2. Filing Forms: 
    1. 720, Quarterly Federal Excise Tax Return, or 
    2. Form 2290, Heavy Highway Vehicle Use Tax Return.
 
 ## Information Returns
 
-1. **When Required:** If you make or receive payments in your business.
-2. **Filing Forms:** 
+1. When Required: If you make or receive payments in your business.
+2. Filing Forms:  
    1. 1099-MISC for miscellaneous payments  
    2. Form 1099-NEC for nonemployee compensation  
    3. Form 8300 for cash payments over $10,000
 
 ## Going Out of Business Checklists
 
-1. **Filing Forms:**
+1. Filing Forms:
    1. include Schedule C  
    2. Form 4797  
    3. Form 941, and others  
@@ -59,11 +59,11 @@ title: p334.chapter.1.pdf
 
 # Chapter 1 Quiz Questions
 
-1. **What identification number should a sole proprietor use if they do not have employees?**
-   - **Answer:** Social Security Number (SSN).
+1. What identification number should a sole proprietor use if they do not have employees?
+   - Answer: Social Security Number (SSN).
 
-2. **What is the self-employment tax rate for 2023?**
-   - **Answer:** 15.3%.
+2. What is the self-employment tax rate for 2023?
+   - Answer: 15.3%.
 
-3. **Which form is used to report nonemployee compensation of $600 or more?**
-   - **Answer:** Form 1099-NEC.
+3. Which form is used to report non-employee compensation of $600 or more?
+   - Answer: Form 1099-NEC.
