--- a/_posts/p334.chapter.03.md
+++ b/_posts/p334.chapter.03.md
@@ -18,62 +18,62 @@ See Publications (for more detail)
 
 ## Gross Receipts
 
-1. **Definition:** Total income received from all sources(sales, interest, etc) before any expenses are deducted.
-2. **Types of Gross Receipts:**
-   - **Sales of Products or Services:** Includes cash, checks, credit card payments, and the fair market value of property or services received.
-   - **Sales Returns and Allowances:** Reductions in sales for returned goods or allowances for damaged goods.
-   - **Cancellations of Debt:** Certain types of debt forgiveness may be considered income.
-3. **Bartering Income:**
-   - **Definition:** Exchange of goods or services without money, which must be included in gross receipts.
-   - **Reporting:** Must report the **fair market value of goods or services** received.
+1. Definition: Total income received from all sources(sales, interest, etc) before any expenses are deducted.
+2. Types of Gross Receipts:
+   - Sales of Products or Services: Includes cash, checks, credit card payments, and the fair market value of property or services received.
+   - Sales Returns and Allowances: Reductions in sales for returned goods or allowances for damaged goods.
+   - Cancellations of Debt: Certain types of debt forgiveness may be considered income.
+3. Bartering Income:
+   - Definition: Exchange of goods or services without money, which must be included in gross receipts.
+   - Reporting: Must report the fair market value of goods or services received.
 
 ## Cost of Goods Sold (COGS)
 
-1. **Definition:** Direct costs attributable to the production of goods sold by a business.
-2. **Calculating COGS:**
-   - **Beginning Inventory:** Value of inventory at the start of the year.
-   - **Purchases:** Cost of inventory bought during the year.
-   - **Labor Costs:** Wages paid to workers directly involved in producing goods.
-   - **Materials and Supplies:** Costs for items used in the manufacturing process.
-   - **Ending Inventory:** Value of inventory at the end of the year.
-   - **Formula:**  See: [Financial formulas](https://mcc-us.github.io/bookkeeping/2023-12-24-Financial-Ratios.html)
+1. Definition: Direct costs attributable to the production of goods sold by a business.
+2. Calculating COGS:
+   - Beginning Inventory: Value of inventory at the start of the year.
+   - Purchases: Cost of inventory bought during the year.
+   - Labor Costs: Wages paid to workers directly involved in producing goods.
+   - Materials and Supplies: Costs for items used in the manufacturing process.
+   - Ending Inventory: Value of inventory at the end of the year.
+   - Formula:  See: [Financial formulas](https://mcc-us.github.io/bookkeeping/2023-12-24-Financial-Ratios.html)
 $$COGS = Beginning Inventory + Purchases + Labor Costs + Materials and Supplies - Ending Inventory$$
-1. **Impact on Gross Income:**
+1. Impact on Gross Income:
    - COGS is subtracted from gross receipts to determine gross profit.
 
 ## Other Income
 
-1. **Types of Other Income:**
-   - **Interest and Dividends:** Income from investments.
-   - **Rents:** Income from leasing property.
-   - **Royalties:** Income from intellectual property.
-   - **Bad Debts Recovered:** Money received from debts that were previously written off as uncollectible.
-2. **Reporting Other Income:**
+1. Types of Other Income:
+   - Interest and Dividends: Income from investments.
+   - Rents: Income from leasing property.
+   - Royalties: Income from intellectual property.
+   - Bad Debts Recovered: Money received from debts that were previously written off as uncollectible.
+2. Reporting Other Income:
    - Reported on Schedule C or other applicable tax forms.
 
 ## Income from Personal Services
 
-1. **Definition:** Earnings from work performed, including fees, wages, and other compensation.
-2. **Reporting Personal Services Income:**
+1. Definition: Earnings from work performed, including fees, wages, and other compensation.
+2. Reporting Personal Services Income:
    - Must include all forms of compensation, including cash and the fair market value of goods or services received in exchange for personal services.
 
 ## Non-Taxable Income
 
-1. **Types of Non-Taxable Income:**
-   - **Gifts and Inheritances:** Generally not taxable.
-   - **Life Insurance Proceeds:** Excluded from income in most cases.
-   - **Certain Fringe Benefits:** Some employer-provided benefits are non-taxable.
-2. **Exclusions:** Specific rules govern the exclusion of certain types of income from taxation.
+1. Types of Non-Taxable Income:
+   - Gifts and Inheritances: Generally not taxable.
+   - Life Insurance Proceeds: Excluded from income in most cases.
+   - Certain Fringe Benefits: Some employer-provided benefits are non-taxable.
+2. Exclusions: Specific rules govern the exclusion of certain types of income from taxation.
 
 ---
 
 # Chapter 3 Quiz Questions
 
-1. **What must be included in gross receipts when bartering?**
-   - **Answer:** The fair market value of the goods or services received.
+1. What must be included in gross receipts when bartering?
+   - Answer: The fair market value of the goods or services received.
 
-2. **How is Cost of Goods Sold (COGS) calculated?**
-   - **Answer:** COGS = Beginning Inventory + Purchases + Labor Costs + Materials and Supplies - Ending Inventory.
+2. How is Cost of Goods Sold (COGS) calculated?
+   - Answer: COGS = Beginning Inventory + Purchases + Labor Costs + Materials and Supplies - Ending Inventory.
 
-3. **Which type of income is generally not taxable?**
-   - **Answer:** Gifts and inheritances are generally not taxable.
+3. Which type of income is generally not taxable?
+   - Answer: Gifts and inheritances are generally not taxable.
