--- a/_posts/p334.chapter.04.md
+++ b/_posts/p334.chapter.04.md
@@ -11,97 +11,97 @@ Form (and Instructions) - 3800 General Business Credit, 6251 Alternative Minimum
 
 ## Business Expenses
 
-1. **Definition:** **Ordinary and necessary costs** of carrying on a trade or business.
-2. **Ordinary Expense:** Common and accepted in your trade or business.
-3. **Necessary Expense:** Helpful and appropriate for your business, though not necessarily indispensable.
+1. Definition: Ordinary and necessary costs of carrying on a trade or business.
+2. Ordinary Expense: Common and accepted in your trade or business.
+3. Necessary Expense: Helpful and appropriate for your business, though not necessarily indispensable.
 
 ## Cost of Goods Sold (COGS)
 
-1. **Definition:** Direct costs of producing the goods sold by your business.
-2. **Components of COGS:**
-   - **Inventory Costs:** Cost of materials and supplies used in production.
-   - **Labor Costs:** Wages paid to workers directly involved in production.
-   - **Overhead:** Costs indirectly tied to production, such as utilities and rent.
+1. Definition: Direct costs of producing the goods sold by your business.
+2. Components of COGS:
+   - Inventory Costs: Cost of materials and supplies used in production.
+   - Labor Costs: Wages paid to workers directly involved in production.
+   - Overhead: Costs indirectly tied to production, such as utilities and rent.
 
 ## Capital Expenses
 
-1. **Definition:** Costs of purchasing assets that have a useful life beyond the tax year, or 1 year.
-2. **Types of Capital Expenses:**
-   - **Business Start-Up Costs:** Expenses incurred before the business begins operation.
-   - **Improvements:** Costs to increase the value or extend the life of business property.
-   - **Assets:** Purchases such as buildings, machinery, and equipment.
+1. Definition: Costs of purchasing assets that have a useful life beyond the tax year, or 1 year.
+2. Types of Capital Expenses:
+   - Business Start-Up Costs: Expenses incurred before the business begins operation.
+   - Improvements: Costs to increase the value or extend the life of business property.
+   - Assets: Purchases such as buildings, machinery, and equipment.
 
 ## Personal versus Business Expenses
 
-1. **Mixed-Use Property:**
+1. Mixed-Use Property:
    - Expenses related to property used for both personal and business purposes must be divided based on the proportion of business use.
-2. **Non-Deductible Personal Expenses:**
+2. Non-Deductible Personal Expenses:
    - Personal living or family expenses are not deductible as business expenses.
 
 ## Business Use of Your Home
 
-1. **Eligibility Requirements:**
+1. Eligibility Requirements:
    - Part of your home must be used regularly and exclusively for business.
-2. **Deductible Expenses:**
+2. Deductible Expenses:
    - Includes mortgage interest, rent, utilities, repairs, and depreciation related to the business portion of your home.
-3. **Simplified Option:**
+3. Simplified Option:
    - Allows a standard deduction of $5 per square foot of business use, up to 300 square feet.
 
 ## Business Use of Your Car
 
-1. **Standard Mileage Rate:**
+1. Standard Mileage Rate:
    - Deduct a fixed rate for each mile driven for business purposes.
    - 65.5 cents a mile
-2. **Actual Expense Method:**
+2. Actual Expense Method:
    - Deduct the actual expenses of operating the vehicle, including gas, oil, insurance, repairs, and depreciation.
 
 ## Employee Pay
 
-1. **Wages and Salaries:**
+1. Wages and Salaries:
    - Amounts paid for services performed by employees.
-2. **Bonuses and Commissions:**
+2. Bonuses and Commissions:
    - Additional compensation provided to employees.
-3. **Employee Benefit Programs:**
+3. Employee Benefit Programs:
    - Costs for programs such as health insurance, retirement plans, and education assistance.
 
 ## Rent Expense
 
-1. **Deductible Rent:**
+1. Deductible Rent:
    - Rent paid for property you use in your trade or business.
-2. **Restrictions:**
+2. Restrictions:
    - Rent paid in advance must be deducted in the year to which it applies, not when paid.
 
 ## Interest
 
-1. **Types of Deductible Interest:**
+1. Types of Deductible Interest:
    - Interest on loans used for business purposes, including mortgages and business loans.
-2. **Limitations:**
+2. Limitations:
    - Interest related to personal expenses or for tax-exempt income is not deductible.
 
 ## Taxes
 
-1. **Deductible Taxes:**
+1. Deductible Taxes:
    - State, local, and foreign taxes related to business operations.
    - Employment taxes, including social security and Medicare taxes, paid on behalf of employees.
-2. **Non-Deductible Taxes:**
+2. Non-Deductible Taxes:
    - Federal income taxes and penalties are not deductible.
 
 ## Insurance
 
-1. **Deductible Insurance Premiums:**
+1. Deductible Insurance Premiums:
    - Insurance that is ordinary and necessary for your business, including liability, malpractice, and workers' compensation insurance.
-2. **Life Insurance Premiums:**
+2. Life Insurance Premiums:
    - Premiums for life insurance where you are directly or indirectly the beneficiary are not deductible.
 
 ---
 
 # Chapter 4 Quiz Questions
 
-1. **What criteria must be met for a business expense to be deductible?**
-   - **Answer:** The expense must be both ordinary and necessary for the business.
+1. What criteria must be met for a business expense to be deductible?
+   - Answer: The expense must be both ordinary and necessary for the business.
 
-2. **What is the simplified option for the home office deduction?**
-   - **Answer:** The simplified option allows a standard deduction of $5 per square foot of business use, up to 300 square feet.
+2. What is the simplified option for the home office deduction?
+   - Answer: The simplified option allows a standard deduction of $5 per square foot of business use, up to 300 square feet.
 
-3. **Can you deduct federal income taxes as a business expense?**
-   - **Answer:** No, federal income taxes are not deductible as a business expense.
+3. Can you deduct federal income taxes as a business expense?
+   - Answer: No, federal income taxes are not deductible as a business expense.
